--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "devDependencies": {
     "@eslint/compat": "^1.3.0",
     "@eslint/js": "^9.29.0",
+    "@vitest/coverage-v8": "3.2.4",
     "eslint-config-prettier": "^10.1.5",
     "prettier": "^3.6.0",
     "tsdown": "^0.12.8",
     "typescript-eslint": "^8.34.1",
+    "vite": "^7.0.0",
     "vitest": "^3.2.4"
   },
   "peerDependencies": {
@@ -21,7 +23,7 @@
     "style:write": "prettier -w .",
     "lint": "eslint .",
     "test": "vitest run",
-    "test:watch": "vitest watch",
+    "test:watch": "vitest watch --coverage",
     "build": "tsdown",
     "dev": "tsdown --watch --no-clean"
   },
