--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
   "devDependencies": {
     "@eslint/compat": "^1.3.0",
     "@eslint/js": "^9.29.0",
+    "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "3.2.4",
     "eslint-config-prettier": "^10.1.5",
+    "jsdom": "^26.1.0",
     "prettier": "^3.6.0",
-    "tsdown": "^0.12.8",
-    "typescript-eslint": "^8.34.1",
+    "tsdown": "^0.12.9",
+    "typescript-eslint": "^8.35.0",
     "vite": "^7.0.0",
     "vitest": "^3.2.4"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   },
   "scripts": {
     "style": "prettier -c .",
@@ -34,6 +36,7 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
+    "msw": "^2.10.2",
     "xstate": "^5.20.0",
     "zod": "^3.25.67"
   }
