--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "@eslint/compat": "^1.3.0",
     "@eslint/js": "^9.29.0",
     "@vitest/coverage-v8": "3.2.4",
+    "arktype": "^2.1.20",
     "eslint-config-prettier": "^10.1.5",
     "jsdom": "^26.1.0",
     "prettier": "^3.6.0",
     "tsdown": "^0.12.9",
     "typescript-eslint": "^8.35.0",
     "vite": "^7.0.0",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "zod": "^3.25.67"
   },
   "peerDependencies": {
     "typescript": "^5.8.3"
@@ -35,8 +37,8 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
+    "@standard-schema/spec": "^1.0.0",
     "msw": "^2.10.2",
-    "xstate": "^5.20.0",
-    "zod": "^3.25.67"
+    "xstate": "^5.20.0"
   }
 }
