a bit more testing, new errors.ts

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "style": "prettier -c .",
     "style:write": "prettier -w .",
     "lint": "eslint .",
-    "test": "vitest run",
+    "test": "vitest run --coverage",
     "test:watch": "vitest watch --coverage",
     "build": "tsdown",
     "dev": "tsdown --watch --no-clean"
