hopefully the last of the commits

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,7 @@
 name: Publish Package
+permissions:
+  contents: read
+  packages: write
 
 on:
   workflow_dispatch:
@@ -7,25 +10,26 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out
+        uses: actions/checkout@v4
 
-      - uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: 'latest' # or "latest", "canary", <sha>
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
 
-      - name: get package version
+      - name: Get package version
         id: package-version
         run: |
           VERSION=$(jq -r '.version' package.json)
-          echo "version=$VERSION" >> "$github_output"
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
           if [[ "$VERSION" =~ ^0\. ]]; then
-            echo "is_prerelease=true" >> "$github_output"
+            echo "is_prerelease=true" >> "$GITHUB_OUTPUT"
           else
-            echo "is_prerelease=false" >> "$github_output"
+            echo "is_prerelease=false" >> "$GITHUB_OUTPUT"
           fi
 
-      - uses: actions/cache@v4
+      - name: Retrieve Bun cache
+        uses: actions/cache@v4
         with:
           path: |
             ~/.bun/install/cache
@@ -42,8 +46,8 @@ jobs:
         env:
           NPM_CONFIG_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: create release
-        uses: softprops/action-gh-release@v1
+      - name: Create release
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.package-version.outputs.version }}
           name: local-first ${{ steps.package-version.outputs.version }}
