--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,9 +12,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@v2
 
-      - uses: actions/cache@v4
+      - name: Retrieve Bun cache
+        uses: actions/cache@v4
         with:
           path: |
             ~/.bun/install/cache
@@ -34,9 +35,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@v2
 
-      - uses: actions/cache@v4
+      - name: Retrieve Bun cache
+        uses: actions/cache@v4
         with:
           path: |
             ~/.bun/install/cache
@@ -56,9 +58,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@v2
 
-      - uses: actions/cache@v4
+      - name: Retrieve Bun cache
+        uses: actions/cache@v4
         with:
           path: |
             ~/.bun/install/cache
@@ -78,9 +81,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@v2
 
-      - uses: actions/cache@v4
+      - name: Retrieve Bun cache
+        uses: actions/cache@v4
         with:
           path: |
             ~/.bun/install/cache
