--- a/basic/browser/package.json
+++ b/basic/browser/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "ground0",
+  "name": "@ground0/browser",
   "module": "./dist/index.js",
   "type": "module",
   "version": "0.1.0",
   "private": false,
   "sideEffects": false,
   "packageManager": "bun@1.2.18",
-  "workspaces": ["basic/*", "adapters/*", "sample_integrations/*/*"],
+  "workspaces": [
+    "basic/*",
+    "adapters/*",
+    "sample_integrations/*/*"
+  ],
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.30.1",
@@ -44,6 +48,7 @@
   "dependencies": {
     "@cloudflare/workers-types": "^4.20250712.0",
     "@standard-schema/spec": "^1.0.0",
-    "xstate": "^5.20.1"
+    "xstate": "^5.20.1",
+    "@ground0/shared": "workspace:*"
   }
 }
