--- a/basic/shared/package.json
+++ b/basic/shared/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "ground0",
+  "name": "@ground0/shared",
   "module": "./dist/index.js",
   "type": "module",
   "version": "0.1.0",
   "private": false,
   "sideEffects": false,
   "packageManager": "bun@1.2.18",
-  "workspaces": ["basic/*", "adapters/*", "sample_integrations/*/*"],
+  "workspaces": [
+    "basic/*",
+    "adapters/*",
+    "sample_integrations/*/*"
+  ],
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.30.1",
