--- a/basic/durable-object/package.json
+++ b/basic/durable-object/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "ground0",
+  "name": "@ground0/durable-object",
   "module": "./dist/index.js",
   "type": "module",
   "version": "0.1.0",
   "private": false,
   "sideEffects": false,
   "packageManager": "bun@1.2.18",
-  "workspaces": ["basic/*", "adapters/*", "sample_integrations/*/*"],
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.30.1",
@@ -17,7 +16,7 @@
     "msw": "^2.10.3",
     "prettier": "^3.6.2",
     "tsdown": "^0.12.9",
-    "turbo": "^2.5.4",
+    "turborepo": "^0.0.1",
     "typescript-eslint": "^8.36.0",
     "vite": "^7.0.4",
     "vitest": "^3.2.4",
@@ -44,6 +43,7 @@
   "dependencies": {
     "@cloudflare/workers-types": "^4.20250712.0",
     "@standard-schema/spec": "^1.0.0",
-    "xstate": "^5.20.1"
+    "xstate": "^5.20.1",
+    "@ground0/shared": "workspace:*"
   }
 }
