--- a/basic/durable-object/tsconfig.json
+++ b/basic/durable-object/tsconfig.json
@@ -25,7 +25,11 @@
 		// Some stricter flags (disabled by default)
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"noPropertyAccessFromIndexSignature": true
+		"noPropertyAccessFromIndexSignature": true,
+
+		"paths": {
+			"@/*": ["./*"]
+		}
 	},
 	"include": ["src/**/*.ts"]
 }
