--- a/basic/durable-object/tsconfig.json
+++ b/basic/durable-object/tsconfig.json
@@ -28,7 +28,7 @@
 		"noPropertyAccessFromIndexSignature": true,
 
 		"paths": {
-			"@/*": ["./*"]
+			"@/*": ["./src/*"]
 		}
 	},
 	"include": ["src/**/*.ts"]
