--- a/basic/shared/tsconfig.json
+++ b/basic/shared/tsconfig.json
@@ -27,7 +27,7 @@
 		"noPropertyAccessFromIndexSignature": true,
 
 		"paths": {
-			"@/*": ["./*"]
+			"@/*": ["./src/*"]
 		}
 	},
 	"include": ["src/**/*.ts"]
