--- a/package.json
+++ b/package.json
@@ -11,17 +11,13 @@
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.30.1",
     "@vitest/coverage-v8": "3.2.4",
-    "arktype": "^2.1.20",
     "eslint-config-prettier": "^10.1.5",
-    "jsdom": "^26.1.0",
-    "msw": "^2.10.3",
     "prettier": "^3.6.2",
     "tsdown": "^0.12.9",
     "turbo": "^2.5.4",
     "typescript-eslint": "^8.36.0",
     "vite": "^7.0.4",
-    "vitest": "^3.2.4",
-    "zod": "^4.0.2"
+    "vitest": "^3.2.4"
   },
   "peerDependencies": {
     "typescript": "^5.8.3"
@@ -30,20 +26,10 @@
     "style": "prettier -c .",
     "style:write": "prettier -w .",
     "lint": "eslint .",
-    "test": "vitest run --coverage",
-    "test:watch": "vitest watch --coverage",
-    "build": "tsdown",
-    "dev": "tsdown --watch --no-clean"
+    "test": "turbo test",
+    "test:watch": "turbo test:watch",
+    "build": "turbo build",
+    "dev": "turbo dev"
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": "./dist/index.js",
-    "./package.json": "./package.json"
-  },
-  "dependencies": {
-    "@cloudflare/workers-types": "^4.20250712.0",
-    "@standard-schema/spec": "^1.0.0",
-    "xstate": "^5.20.1"
-  }
+  "dependencies": {}
 }
