--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -72,11 +72,40 @@ jobs:
       - name: Install dependencies
         run: bun i
 
+      - name: Build
+        run: bun run build
+
       - name: Test
         run: bun run test
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2
+
+  Check-Types:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out
+        uses: actions/checkout@v4
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+
+      - name: Retrieve Bun cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+
+      - name: Install dependencies
+        run: bun i
+
+      - name: Build
+        run: bun run build
+
+      - name: Check types
+        run: bun run check-types
 
   Build:
     runs-on: ubuntu-latest
