--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "turbo": "^2.5.4",
     "typescript-eslint": "^8.36.0",
     "vite": "^7.0.4",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
   "peerDependencies": {
