--- a/basic/browser/package.json
+++ b/basic/browser/package.json
@@ -7,20 +7,8 @@
   "sideEffects": false,
   "packageManager": "bun@1.2.18",
   "devDependencies": {
-    "@eslint/compat": "^1.3.1",
-    "@eslint/js": "^9.30.1",
-    "@vitest/coverage-v8": "3.2.4",
-    "arktype": "^2.1.20",
-    "eslint-config-prettier": "^10.1.5",
     "jsdom": "^26.1.0",
-    "msw": "^2.10.3",
-    "prettier": "^3.6.2",
-    "tsdown": "^0.12.9",
-    "turborepo": "^0.0.1",
-    "typescript-eslint": "^8.36.0",
-    "vite": "^7.0.4",
-    "vitest": "^3.2.4",
-    "zod": "^4.0.2"
+    "msw": "^2.10.3"
   },
   "peerDependencies": {
     "typescript": "^5.8.3"
@@ -32,7 +20,8 @@
     "test": "vitest run --coverage",
     "test:watch": "vitest watch --coverage",
     "build": "tsdown",
-    "dev": "tsdown --watch --no-clean"
+    "dev": "tsdown --watch --no-clean",
+    "check-types": "tsc"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -41,8 +30,6 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
-    "@cloudflare/workers-types": "^4.20250712.0",
-    "@standard-schema/spec": "^1.0.0",
     "xstate": "^5.20.1",
     "@ground0/shared": "workspace:*"
   }
