--- a/basic/ground0/package.json
+++ b/basic/ground0/package.json
@@ -14,7 +14,8 @@
     "style:write": "prettier -w .",
     "lint": "eslint .",
     "build": "tsdown",
-    "dev": "tsdown --watch --no-clean"
+    "dev": "tsdown --watch --no-clean",
+    "check-types": "tsc"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
