--- a/basic/shared/package.json
+++ b/basic/shared/package.json
@@ -9,7 +9,10 @@
   "peerDependencies": {
     "typescript": "^5.8.3"
   },
-  "scripts": {
+  "devDependencies": {
+    "arktype": "^2.1.20"
+  },
+ "scripts": {
     "style": "prettier -c .",
     "style:write": "prettier -w .",
     "lint": "eslint .",
