--- a/basic/shared/package.json
+++ b/basic/shared/package.json
@@ -10,7 +10,8 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "arktype": "^2.1.20"
+    "arktype": "^2.1.20",
+    "@types/semver": "^7.7.0"
   },
   "scripts": {
     "test": "vitest run --coverage",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "@standard-schema/spec": "^1.0.0",
-    "zod": "^4.0.2"
+    "zod": "^4.0.2",
+    "semver": "^7.7.2"
   }
 }
