--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
   "name": "ground0",
-  "module": "./dist/index.js",
-  "type": "module",
   "version": "0.1.0",
-  "private": false,
-  "sideEffects": false,
-  "packageManager": "bun@1.2.18",
-  "workspaces": ["basic/*", "adapters/*", "sample_integrations/*/*"],
+  "module": "./dist/index.js",
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
     "@eslint/js": "^9.30.1",
@@ -23,6 +18,8 @@
   "peerDependencies": {
     "typescript": "^5.8.3"
   },
+  "packageManager": "bun@1.2.18",
+  "private": false,
   "scripts": {
     "style": "prettier -c .",
     "style:write": "prettier -w .",
@@ -33,5 +30,7 @@
     "dev": "turbo dev",
     "check-types": "turbo check-types"
   },
-  "dependencies": {}
+  "sideEffects": false,
+  "type": "module",
+  "workspaces": ["basic/*", "adapters/*", "sample_integrations/*/*"]
 }
