--- a/basic/durable-object/package.json
+++ b/basic/durable-object/package.json
@@ -26,6 +26,8 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
+    "superjson": "^2.2.2",
+    "semver": "^7.7.2",
     "@cloudflare/workers-types": "^4.20250712.0",
     "@ground0/shared": "workspace:*"
   }
